--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -5,9 +5,9 @@ name: Tests
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, CITest ]
   pull_request:
-    branches: [ master ]
+    branches: [ master, CITest ]
 
 jobs:
   build:
